# Android-Mp3Encoder

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_Mp3Encoder.cpp  jni_Mp3Encoder.h  mp3_encoder.cpp  mp3_encoder.h
app/src/main/cpp/common/: CommonTools.h
app/src/main/java/com/yb/android/mp3encoder/: FileUtil.java  MainActivity.java  Mp3Encoder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
